--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 .home1{
     height: 100vh;
     width: 100%;
-    background-image: url(../Portfolio/il2.webp);
+    background-image: url(il2.webp);
     background-color:white;
     background-position: right;
     background-repeat: no-repeat;
