--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 .home1{
     height: 100vh;
     width: 100%;
-    background-image: url('il2.webp');
+    background-image: url("https://chandhru17.github.io/codsoft_wd_01/il2.webp");
     background-color:white;
     background-position: right;
     background-repeat: no-repeat;
